--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
   <script>
     const lamps = [
       { id: '1', device_id: 'ebbe3a0e28f1c051e5dut6', selected: false },
-      { id: '2', device_id: 'eb1c33f62ca0c5a746ieh8', selected: false },
+      { id: '2', device_id: 'eb3798411c9512ec08bxvc', selected: false },
       { id: '3', device_id: 'ID_LAMP3', selected: false },
       { id: '4', device_id: 'ID_LAMP4', selected: false },
       { id: '5', device_id: 'ID_LAMP5', selected: false },
