--- a/static/index.html
+++ b/static/index.html
@@ -17,12 +17,12 @@
 
   <script>
     const lamps = [
-      { id: '1', device_id: 'ebbe3a0e28f1c051e5dut6', selected: false },
-      { id: '2', device_id: 'eb3798411c9512ec08bxvc', selected: false },
-      { id: '3', device_id: 'ID_LAMP3', selected: false },
-      { id: '4', device_id: 'ID_LAMP4', selected: false },
-      { id: '5', device_id: 'ID_LAMP5', selected: false },
-      { id: '6', device_id: 'ID_LAMP6', selected: false }
+      { id: '1', device_id: 'ebbe2e80ecc8c609324eow', selected: false },
+      { id: '2', device_id: '76085771483fda12fec9', selected: false },
+      { id: '3', device_id: '76085771483fda1428d2', selected: false },
+      { id: '4', device_id: '57282805bcddc26123ed', selected: false },
+      { id: '5', device_id: '760857718caab54e9dbd', selected: false },
+      { id: '6', device_id: '76085771483fda8f84d1', selected: false }
     ];
     let lastSelected = [];
     const container = document.getElementById('lamps-container');
